Fixed width issues
Project cards were overlapping due to min-width previously committed. Moved min-width to @media section

--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,6 @@ $primary-font: "Urbanist", sans-serif;
   border: 1px solid #50615a;
   margin-top: 40px;
   box-shadow: 5px 5px 12px 2px #50615ab5;
-  min-width: 520px;
 }
 
 .aboutTitle {
@@ -162,6 +161,7 @@ $primary-font: "Urbanist", sans-serif;
   font-family: "Urbanist", sans-serif;
   font-variant: all-small-caps;
   text-align: center;
+  min-width: 520px;
 }
 
 // responsive
@@ -191,6 +191,7 @@ $primary-font: "Urbanist", sans-serif;
     border: none;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 0px #50615a59;
+    min-width: 520px;
   }
 
   .portrait {
